# Py-ImageKit

./: .gitignore  README.md  example1.py  example2.py  example3.py  example4.py  example5.py  imagekit.py  preprocessor.py  run-tests.py  setup.py  v2.0
libimagekit/: .gitignore  CMakeLists.txt  TODO.c  bezier.c  bezier.h  blit.c  blit.h  colorspace.c  colorspace.h  coordinates.c  coords.c  coords.h  curves.c  curves.h  documentation  error.c  error.h  fill.c  fill.h  histogram.c  histogram.h  image.c  image.h  imagebuffer.c  imagebuffer.h  imagekit.c  imagekit.h  io_gif.c  io_gif.h  io_jpeg.c  io_jpeg.h  io_png.c  io_png.h  jpeg.c  jpeg.h  libimagekit.h  png.c  png.h  quickselect.h  rect.h  (+2 more)
libimagekit/draw/: bresenham.c  bresenham.h
libimagekit/filters/: convolution.c  convolution.h  matrix.c  matrix.h  pointfilter.c  pointfilter.h  rankfilter.c  rankfilter.h
libimagekit/htable/: MurmurHash3.c  MurmurHash3.h  hashtable-config.h  hashtable.c  hashtable.h
libimagekit/libimagekit.xcodeproj/: project.pbxproj
libimagekit/scaling/: bilinear.c  bilinear.h  nearest.c  nearest.h
libimagekit/tests/: CMakeLists.txt  framework.c  framework.h  run-tests.sh  test-01-png.c  test-02-jpeg.c  test-03-hsv.c  test-04-mono.c  test-05-jpeg.c  test-06-fill.c  test-07-histogram.c  test-08-blit.c  test-09-bezier.c  test-10-pointfilter.c  test-11-errors.c  test-12-png30.c  test-13-rankfilter.c  test-14-convolution.c  test-15-nearest.c  test-16-bilinear.c  test-17-complex.c  test-18-remove-alpha.c  test-19-bresenham.c
prototype/: __init__.py  imagekit.py
prototype/colorspace/: __init__.py  colorspace.py  conversion.py
prototype/filters/: resize.py
src/: coordinates.c  coords.c  cs-convert.c  curves.c  filter.c  imagebuffer.c  imagekit.h  jpeg.c  module.c  module.h  png.c  pointfilter.c  rect.c  sort.c
tests/issues/: 1.py
